2005-04-29  Ethan Merritt  <merritt@u.washington.edu>

	* term/x11.trm term/gd.trm term/pdf.trm src/misc.c src/gplt_x11.c:
	Whitespace cleanup.

	* term/gd.trm (PNG_options): Accept string variable for font name.

2005-04-29  Petr Mikulik  <mikulik@physics.muni.cz>

	* pm3d.c (set_plot_with_palette): Fix for 'splot x, y with pm3d'.

2005-04-28  Ethan Merritt  <merritt@u.washington.edu>

	* term/x11.trm (X11_options): Accept string variables for terminal
	options 'font <foo>' and 'title <bar>'.

	* term/post.trm (PS_options) term/emf.trm (EMF_options): 
	Accept string variable for font name.

2005-04-28  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* config/makefile.wc: Update for more Watcom-like usage of tools.

	* config/config.wc: New file.  Promised long ago, when I added
	makefile.wc, finally got round to doing it.
	
	* config/config.oww, config/makefile.oww: Rewrite for more
	features and more Watcom-like usage of tools.

	* src/readline.c [__WATCOMC__]: Add #include <conio.h> for getch()
	function.

2005-04-27  Ethan Merritt  <merritt@u.washington.edu>

	* src/set.c (set_label): If the first option after 'set label' is an
	expression, handle it appropriately whether it is a numerical expression
	that provides the label id tag or a string expression that provides the
	label itself.

2005-04-27  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/command.c (call_kill_pending_Pause_dialog): Fix accidental
	removal of this function caused by yesterday's change.

2005-04-26  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/win/wgraph.c (drawgraph): Initialize local variable to avoid
	a -Wuninitialized.

	* src/history.c (write_history_n): Only define local is_pipe if
	PIPES enabled.  Avoids a -Wunused.

	* src/command.c (winsystem): Define this function only if
	USE_OWN_WINSYSTEM_FUNCTION is set.  Removes a -Wunused.

2005-04-24  Ethan Merritt  <merritt@u.washington.edu>
